# scIHPF

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
Data/: reademe.txt  readme.md
IHPF/: Dataset preparation .ipynb  Dataset preparation.ipynb  HPF_robustness.ipynb  IHPF example.ipynb  IHPF.py  ihpf_hyper_search.py  inmf_hyper_search.py
MF/: IHPF example.ipynb  MF.py
Test/: MF.py
scripts/: MF.py  main.py  readme.md
src/scIHPF/: __init__.py
