[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    'scikit-learn',
    "numba >= 0.39, !=0.41, !=0.42, !=0.43; python_version<='3.7.3'",
    "numba >= 0.44; python_version=='3.7.4'",
    "numba >= 0.45; python_version>'3.7.4'",
    'scipy >= 1.1',
    'numpy',
    'pandas',
    'joblib',
    'scanpy',
]
build-backend = "setuptools.build_meta"