[metadata]
name = scIHPF
version = 0.0.1
author = Thomas Wong
author_email = mw4315@ic.ac.uk
description = scIHPF
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ThomasWong2022/scIHPF/
project_urls =
    Bug Tracker = https://github.com/ThomasWong2022/scIHPF/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
python_requires = <=3.7

[options.packages.find]
where = src